Hardcoded strings rewritten

--- a/app/src/main/res/layout/activity_dice.xml
+++ b/app/src/main/res/layout/activity_dice.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:background="@drawable/rounded_buttons"
-        android:text="I want to make my own list of tricks"
+        android:text="@string/btn_custom_game"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textStyle="bold"
@@ -39,7 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:background="@drawable/rounded_buttons"
-        android:text="I want to use a pre-set list of tricks"
+        android:text="@string/btn_preset_game"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textStyle="bold"
@@ -52,7 +52,7 @@
         android:id="@+id/lbl_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="S.K.A.T.E Dice"
+        android:text="@string/dice_main_label"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -67,7 +67,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
-        android:text="This is the S.K.A.T.E Dice where you will be able to randomly roll tricks from your own list, or a pre-set list of tricks. To begin, start by choosing one of the options below! "
+        android:text="@string/dice_main_instructions"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
