--- a/app/src/main/res/layout/fragment_choose_difficulty.xml
+++ b/app/src/main/res/layout/fragment_choose_difficulty.xml
@@ -28,7 +28,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
-            android:text="Good Luck!"
+            android:text="@string/difficulty_line_2"
             android:textAlignment="center"
             android:textSize="14sp"
             android:textStyle="bold"
@@ -44,7 +44,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="16dp"
-            android:text="This is the preset S.K.A.T.E dice with different levels of difficulty. Choosing one of the following optiosn will allow you to play with an unseen list of tricks."
+            android:text="@string/difficulty_instructions"
             android:textAlignment="center"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -55,7 +55,7 @@
             android:id="@+id/lbl_diceTitle3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="S.K.A.T.E Dice"
+            android:text="@string/dice_main_label"
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -69,7 +69,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:background="@drawable/rounded_buttons"
-            android:text="Extreme"
+            android:text="@string/level_extreme"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textStyle="bold"
@@ -83,7 +83,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:background="@drawable/rounded_buttons"
-            android:text="Easy"
+            android:text="@string/level_easy"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textStyle="bold"
@@ -97,7 +97,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:background="@drawable/rounded_buttons"
-            android:text="Medium"
+            android:text="@string/level_medium"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textStyle="bold"
@@ -111,7 +111,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:background="@drawable/rounded_buttons"
-            android:text="Hard"
+            android:text="@string/level_hard"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textStyle="bold"
