--- a/app/src/main/res/layout/fragment_display_profile.xml
+++ b/app/src/main/res/layout/fragment_display_profile.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:fontFamily="sans-serif"
-        android:text="{ EMAIL }"
+        android:text="@string/email_placeholder"
         android:textAlignment="center"
         android:textSize="12sp"
         android:textStyle="bold"
@@ -26,7 +26,7 @@
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:text="Log out"
+        android:text="@string/btn_logout"
         android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,7 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif"
-        android:text="{ USERNAME }"
+        android:text="@string/username_placeholder"
         android:textAlignment="center"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -50,7 +50,7 @@
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Edit Profile"
+        android:text="@string/btn_editProfile"
         android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
@@ -75,7 +75,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:text="Contributions: "
+        android:text="@string/contributions"
         android:textAlignment="viewStart"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -87,7 +87,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:text="xxx"
+        android:text="@string/profile_stat_placeholder"
         android:textAlignment="textEnd"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/divider3" />
@@ -97,7 +97,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Reviews: "
+        android:text="@string/reviews"
         android:textAlignment="textStart"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/txt_valueReviews"
@@ -108,7 +108,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="xxx"
+        android:text="@string/profile_stat_placeholder"
         android:textAlignment="textStart"
         app:layout_constraintStart_toEndOf="@+id/txt_contributions"
         app:layout_constraintTop_toBottomOf="@+id/divider3" />
@@ -130,7 +130,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="sample biography"
+        android:text="@string/bio_placeholder"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/divider4" />
