--- a/app/src/main/res/layout/fragment_location_type.xml
+++ b/app/src/main/res/layout/fragment_location_type.xml
@@ -27,7 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:background="@drawable/rounded_buttons"
-            android:text="Add Park"
+            android:text="@string/btn_add_park"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textStyle="bold"
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:background="@drawable/rounded_buttons"
-            android:text="Add Spot"
+            android:text="@string/btn_add_spot"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textStyle="bold"
@@ -55,7 +55,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:background="@drawable/rounded_buttons"
-            android:text="Add Shop"
+            android:text="@string/btn_add_shop"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textStyle="bold"
@@ -67,7 +67,7 @@
             android:id="@+id/lbl_chooseLocationType"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Add a Location to the map"
+            android:text="@string/new_location_label"
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -82,7 +82,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="16dp"
-            android:text="Want to add your own location to the map? Choose from one of the options below to continue!"
+            android:text="@string/new_location_instructions"
             android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
