--- a/app/src/main/res/layout/fragment_play_game.xml
+++ b/app/src/main/res/layout/fragment_play_game.xml
@@ -25,7 +25,7 @@
             android:id="@+id/lbl_diceTitle2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="S.K.A.T.E Dice"
+            android:text="@string/dice_main_label"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="20sp"
@@ -40,7 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="64dp"
             android:layout_marginEnd="16dp"
-            android:text="S"
+            android:text="@string/dice_s"
             android:textAlignment="center"
             android:textSize="34sp"
             android:textStyle="bold"
@@ -55,7 +55,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="64dp"
             android:layout_marginEnd="16dp"
-            android:text="K"
+            android:text="@string/dice_k"
             android:textAlignment="center"
             android:textSize="34sp"
             android:textStyle="bold"
@@ -69,7 +69,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="64dp"
-            android:text="A"
+            android:text="@string/dice_a"
             android:textAlignment="center"
             android:textSize="34sp"
             android:textStyle="bold"
@@ -85,7 +85,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="64dp"
-            android:text="T"
+            android:text="@string/dice_t"
             android:textAlignment="center"
             android:textSize="34sp"
             android:textStyle="bold"
@@ -100,7 +100,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="64dp"
-            android:text="E"
+            android:text="@string/dice_e"
             android:textAlignment="center"
             android:textSize="34sp"
             android:textStyle="bold"
@@ -123,13 +123,13 @@
             app:layout_constraintTop_toBottomOf="@+id/lbl_A" />
 
         <Button
-            android:textAllCaps="false"
             android:id="@+id/btn_startGame"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="200dp"
             android:background="@drawable/rounded_buttons"
-            android:text="Start"
+            android:text="@string/btn_play_dice"
+            android:textAllCaps="false"
             android:textColor="@color/white"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -143,7 +143,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="8dp"
-            android:text="When you are ready to begin playing, press &quot;Start&quot; to roll a random trick from the list. Give the trick an attempt, and Press the Tick if you land the trick, or the Cross if you fail to land the trick. Remember, last letter gets two tries!"
+            android:text="@string/play_dice_instructions"
             android:textAlignment="center"
             app:layout_constraintBottom_toTopOf="@+id/btn_startGame"
             app:layout_constraintEnd_toEndOf="parent"
