--- a/app/src/main/res/layout/fragment_add_park.xml
+++ b/app/src/main/res/layout/fragment_add_park.xml
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:text="Condition"
+            android:text="@string/label_location_cond"
             android:textSize="12sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/input_desc_park" />
@@ -63,7 +63,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:text="Address:"
+            android:text="@string/label_location_address"
             android:textSize="12sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/input_name_park" />
@@ -74,7 +74,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:text="Description"
+            android:text="@string/label_location_desc"
             android:textSize="12sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/input_address_park" />
@@ -85,7 +85,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="24dp"
-            android:text="What is the name of the Skate park?"
+            android:text="@string/label_park_name"
             android:textSize="12sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/lbl_add_park" />
@@ -106,7 +106,7 @@
             android:id="@+id/lbl_add_park"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Add Skate park"
+            android:text="@string/label_add_park"
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -129,7 +129,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="32dp"
-            android:text="Please login via the profile tab to continue"
+            android:text="@string/login_to_continue"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -141,7 +141,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="32dp"
             android:background="@drawable/rounded_buttons"
-            android:text="Submit"
+            android:text="@string/btn_location_submit"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textStyle="bold"
